fix overflow on data source selection

--- a/css/main.css
+++ b/css/main.css
@@ -410,5 +410,6 @@ tfoot th input { width: 80% }
 }
 
 #sourcemodal .content {
-  overflow: both;
+  height: 400px;
+  overflow: auto;
 }
